tests/fixtures/invalid/max_none_dict.py
# Cannot call max() with None, Dict[str, int]
x = max(None, {"a": 1})
